login page update

--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,8 @@
 /* style.css */
+body {
+    height: 100vh;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-image: url('../img/main0.jpg');
+}
