level1.html 게임 시작 전 설정

--- a/css/seed_background.css
+++ b/css/seed_background.css
@@ -3,5 +3,5 @@ body {
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
-    background-image: url('../img/main1.jpg');
+    background-image: url('../image/main1.jpg');
 }
