--- a/css/style.css
+++ b/css/style.css
@@ -4,5 +4,5 @@ body {
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
-    background-image: url('../img/main0.jpg');
+    background-image: url('../image/main0.jpg');
 }
